--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@emotion/styled": "^11.11.0",
     "@mui/icons-material": "^5.15.6",
     "@reduxjs/toolkit": "^2.1.0",
+    "formik": "^2.4.5",
     "framer-motion": "^11.0.3",
     "lottie-react": "^2.4.0",
     "react": "^18.2.0",
