--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@apollo/client": "^3.9.1",
     "@chakra-ui/react": "^2.8.2",
     "@emailjs/browser": "^3.12.1",
     "@emotion/react": "^11.11.3",
@@ -18,6 +19,7 @@
     "@reduxjs/toolkit": "^2.1.0",
     "formik": "^2.4.5",
     "framer-motion": "^11.0.3",
+    "graphql": "^16.8.1",
     "lottie-react": "^2.4.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
