--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@emotion/styled": "^11.11.0",
     "@mui/icons-material": "^5.15.6",
     "@reduxjs/toolkit": "^2.1.0",
+    "axios": "^1.6.7",
     "formik": "^2.4.5",
     "framer-motion": "^11.0.3",
     "lottie-react": "^2.4.0",
@@ -25,6 +26,7 @@
     "react-redux": "^9.1.0",
     "react-router-dom": "^6.21.3",
     "react-toastify": "^10.0.4",
+    "universal-cookie": "^7.0.2",
     "yup": "^1.3.3"
   },
   "devDependencies": {
