--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "@emotion/styled": "^11.11.0",
     "@mui/icons-material": "^5.15.6",
     "@reduxjs/toolkit": "^2.1.0",
+    "ag-grid-community": "^31.0.3",
+    "ag-grid-react": "^31.0.3",
     "axios": "^1.6.7",
     "formik": "^2.4.5",
     "framer-motion": "^11.0.3",
