--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@reduxjs/toolkit": "^2.1.0",
     "ag-grid-community": "^31.0.3",
     "ag-grid-react": "^31.0.3",
+    "apollo-upload-client": "^18.0.1",
     "axios": "^1.6.7",
     "formik": "^2.4.5",
     "framer-motion": "^11.0.3",
@@ -43,6 +44,7 @@
     "@graphql-codegen/typescript": "^4.0.4",
     "@graphql-codegen/typescript-operations": "^4.1.2",
     "@graphql-codegen/typescript-react-apollo": "^4.3.0",
+    "@types/apollo-upload-client": "^18.0.0",
     "@types/react": "^18.2.43",
     "@types/react-dom": "^18.2.17",
     "@typescript-eslint/eslint-plugin": "^6.14.0",
